Fixed discussion container and scrollbar

--- a/src/components/chat-app/ChatApp.scss
+++ b/src/components/chat-app/ChatApp.scss
@@ -159,13 +159,13 @@ $darkgrey-color: #d4d4d4;
 }
 
 .middle-container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     box-sizing: border-box;
-    grid-template-rows: 65vh auto;
     align-items: center;
     justify-items: center;
-    min-height: 525px;
+    // min-height: 525px;
     flex: 1;
     position: relative;
 }
@@ -186,8 +186,6 @@ form {
     justify-content: center;
     height: fit-content;
     width: 100%;
-    height: 100%;
-    margin-bottom: 2rem;
 }
 
 .input-container {
